--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="contact form example">
-  <title>Contact Form Example</title>
+  <title>Sponsorship Registration</title>
 </head>
 
 <body>
@@ -12,7 +12,7 @@
   <aside>
        <p>
            We would <em>love</em> to hear from you! </p>
-           <p>Please use the <b><em>Contact Form</em></b>
+           <p>Please use the <b><em>Form</em></b> below
            to send us a message.
        </p>
    </aside>
@@ -23,19 +23,13 @@
    <!-- Style The Contact Form How Ever You Prefer -->
    <link rel="stylesheet" href="https://cdn.rawgit.com/dwyl/html-form-send-email-via-google-script-without-server/master/style.css">
 
-  <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="example@email.net"
+  <form id="gform" method="POST" class="pure-form pure-form-stacked" data-email="sahil.qaiser@gmail.com"
   action="https://script.google.com/macros/s/AKfycbxOkcuBL-08vxmUKtv3TGeg2H1WMyDvATnxVNpRbHg1l4Ehqb4/exec">
     <!-- change the form action to your script url -->
 
     <fieldset class="pure-group">
       <label for="name">Name: </label>
-      <input id="name" name="name" placeholder="What your Mom calls you" />
-    </fieldset>
-
-    <fieldset class="pure-group">
-      <label for="message">Message: </label>
-      <textarea id="message" name="message" rows="10"
-      placeholder="Tell us what's on your mind..."></textarea>
+      <input id="name" name="name" placeholder="What is Your Name ?" />
     </fieldset>
 
     <fieldset class="pure-group">
@@ -47,10 +41,15 @@
     </fieldset>
 
     <fieldset class="pure-group">
-      <label for="color">Favourite Color: </label>
-      <input id="color" name="color" placeholder="green" />
+      <label for="color">Sponsorship Plan : </label>
+      <input id="money_limit" name="money_limit" placeholder="5000" />
     </fieldset>
 
+    <fieldset class="pure-group">
+      <label for="message">Message: </label>
+      <textarea id="message" name="message" rows="10"
+      placeholder="Tell us any other plans or deals..."></textarea>
+    </fieldset>
     <button class="button-success pure-button button-xlarge">
       <i class="fa fa-paper-plane"></i>&nbsp;Send</button>
 
