made some changes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <p>
            We would <em>love</em> to hear from you! </p>
            <p>Please use the <b><em>Form</em></b> below
-           to send us a message.
+           to send a message to Miss Sadaf.
        </p>
    </aside>
 
